--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8"/>
 <!-- Enable responsive view on mobile devices -->
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-<title>Learn</title>
+<title>516 Design</title>
 <link rel="stylesheet" type="text/css" href="../styles/styles.css">
 </head>
 
