--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
 <!-- Enable responsive view on mobile devices -->
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 <title>516 Design</title>
-<link rel="stylesheet" type="text/css" href="../styles/styles.css">
+<link rel="stylesheet" type="text/css" href="styles/css/styles.css">
 </head>
 
 <body>
+  <header>
+    <div class="logo"></div>
+  </header>
 
 </body>
 </html>
