Added macbook image and dark header

--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
     <div class="logo"></div>
   </header>
 
+  <div class="content">
+    <div class="macbook">
+      <div class="icon--apple"></div>
+    </div>
+  </div>
+
 </body>
 </html>
