Added illinois decal and adjustments to macbook

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <div class="content">
     <div class="macbook">
+      <div class="decal__il--d"></div>
       <div class="icon--apple"></div>
     </div>
   </div>
