Added clean styles // added helper page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 <title>516 Design</title>
 <link rel="stylesheet" type="text/css" href="styles/css/styles.css">
+<link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -14,9 +15,18 @@
   </header>
 
   <div class="content">
-    <div class="macbook">
-      <div class="decal__il--d"></div>
-      <div class="icon--apple"></div>
+    <div class="header-title">Applying your new decal</div>
+    
+    <div class="help-step">
+      <div class="column-third">
+        <div class="clean-icon"></div>
+      </div>
+
+      <div class="column-two-thirds">
+        <h3 class="help-header">Clean</h3>
+        <p class="help-details">Clean the surface of your MacBook to ensure a smooth and secure application. Be sure the surface is completely dry before you attempt to apply your decal.</p>
+      </div>
+
     </div>
   </div>
 
