--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 <title>516 Design</title>
 <link rel="stylesheet" type="text/css" href="styles/css/styles.css">
 <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-75003310-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 
 <body>
@@ -16,7 +26,7 @@
 
   <div class="content">
     <div class="header-title">Applying your new decal</div>
-    
+
     <div class="help-step">
       <div class="column-third">
         <div class="clean-icon"></div>
