--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
       </div>
 
     </div>
+
+    <div class="help-step">
+      <div class="column-third">
+        <div class="trash-icon"></div>
+      </div>
+
+      <div class="column-two-thirds">
+        <h3 class="help-header">Remove</h3>
+        <p class="help-details">Remove the white backing of the decal. Avoid touching the sticky part when handling it.</p>
+      </div>
+
+    </div>
   </div>
 
 </body>
