Added remove step & placed them in cards

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
 
       <div class="column-two-thirds">
-        <h3 class="help-header">Clean</h3>
+        <h3 class="help-header" id="step-one">Clean</h3>
         <p class="help-details">Clean the surface of your MacBook to ensure a smooth and secure application. Be sure the surface is completely dry before you attempt to apply your decal.</p>
       </div>
 
@@ -45,7 +45,7 @@
       </div>
 
       <div class="column-two-thirds">
-        <h3 class="help-header">Remove</h3>
+        <h3 class="help-header" id="step-two">Remove</h3>
         <p class="help-details">Remove the white backing of the decal. Avoid touching the sticky part when handling it.</p>
       </div>
 
