--- a/guide/index.html
+++ b/guide/index.html
@@ -60,17 +60,17 @@
       </div>
       <div class="column-two-thirds">
         <h3 class="help-header" id="step-two">Remove</h3>
-        <p class="help-details">Remove the white backing from the decal. Avoid touching the sticky part of the decal while handling it.</p>
+        <p class="help-details">Remove the white backing. Try to avoid touching the sticky part of the decal while handling it.</p>
       </div>
     </div>
 
     <div class="help-step">
       <div class="column-third">
-        <div class="trash-icon"></div>
+        <div class="apply-icon"></div>
       </div>
       <div class="column-two-thirds">
         <h3 class="help-header" id="step-three">Place</h3>
-        <p class="help-details">Place your decal on the surface of your MacBook, being sure to align it perfectly around the logo. Press firmly around the decal to set it in place.</p>
+        <p class="help-details">Place your decal on the surface of your MacBook, being sure to align it perfectly around the Apple logo. It may help to slightly open your computer and allow the light to guide you during the application. Press firmly around the decal to set it in place.</p>
       </div>
     </div>
 
