--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8"/>
 <!-- Enable responsive view on mobile devices -->
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-<title>516 Design</title>
-<link rel="stylesheet" type="text/css" href="styles/css/styles.css">
+<title>Guide – 516 Design</title>
+<link rel="stylesheet" type="text/css" href="../styles/css/styles.css">
 <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -17,6 +17,23 @@
   ga('send', 'pageview');
 
 </script>
+
+<script>window.twttr = (function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0],
+    t = window.twttr || {};
+  if (d.getElementById(id)) return t;
+  js = d.createElement(s);
+  js.id = id;
+  js.src = "https://platform.twitter.com/widgets.js";
+  fjs.parentNode.insertBefore(js, fjs);
+
+  t._e = [];
+  t.ready = function(f) {
+    t._e.push(f);
+  };
+
+  return t;
+}(document, "script", "twitter-wjs"));</script>
 </head>
 
 <body>
@@ -63,7 +80,7 @@
       </div>
       <div class="column-two-thirds">
         <h3 class="help-header" id="step-four">Peel</h3>
-        <p class="help-details">Peel off the clear transfer adhesive to reveal your fresh new design!</p>
+        <p class="help-details">Peel off the clear transfer adhesive to reveal your fresh new design! Tweet us a photo of your new decal at <a href="https://twitter.com/intent/tweet?text=Check out my awesome new decal!&via=DE516N" target="blank">@DE516N</a> for 50% off your next purchase!</p>
       </div>
     </div>
 
