--- a/guide/index.html
+++ b/guide/index.html
@@ -17,23 +17,6 @@
   ga('send', 'pageview');
 
 </script>
-
-<script>window.twttr = (function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0],
-    t = window.twttr || {};
-  if (d.getElementById(id)) return t;
-  js = d.createElement(s);
-  js.id = id;
-  js.src = "https://platform.twitter.com/widgets.js";
-  fjs.parentNode.insertBefore(js, fjs);
-
-  t._e = [];
-  t.ready = function(f) {
-    t._e.push(f);
-  };
-
-  return t;
-}(document, "script", "twitter-wjs"));</script>
 </head>
 
 <body>
@@ -80,7 +63,7 @@
       </div>
       <div class="column-two-thirds">
         <h3 class="help-header" id="step-four">Peel</h3>
-        <p class="help-details">Peel off the clear transfer adhesive to reveal your fresh new design! Tweet us a photo of your new decal at <a href="https://twitter.com/intent/tweet?text=Check out my awesome new decal!&via=DE516N" target="blank">@DE516N</a> for 50% off your next purchase!</p>
+        <p class="help-details">Peel off the clear transfer adhesive to reveal your fresh new design! Tweet us a photo of your new decal at <a href="https://twitter.com/DE516N" target="blank">@DE516N</a> for 50% off your next purchase!</p>
       </div>
     </div>
 
