added twitter icon // added footer styles

--- a/guide/index.html
+++ b/guide/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <header>
+  <header class="header">
     <div class="logo"></div>
   </header>
 
@@ -68,6 +68,10 @@
     </div>
 
   </div>
+
+  <footer class="column">
+    <p>&copy;2016 516 Design</p>
+  </footer>
 
 </body>
 </html>
