--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!-- Enable responsive view on mobile devices -->
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 <title>Guide – 516 Design</title>
-<link rel="stylesheet" type="text/css" href="../styles/css/styles.css">
+<link rel="stylesheet" type="text/css" href="styles/css/styles.css">
 <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
