Added SMACSS symantics // added navigation

--- a/guide/index.html
+++ b/guide/index.html
@@ -5,7 +5,7 @@
 <!-- Enable responsive view on mobile devices -->
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 <title>Guide – 516 Design</title>
-<link rel="stylesheet" type="text/css" href="../styles/css/styles.css">
+<link rel="stylesheet" type="text/css" href="../styles/css/index.css">
 <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -21,16 +21,20 @@
 
 <body>
   <header class="header">
-    <div class="logo"></div>
+    <a href="../index.html" class="header--logo"></a>
+    <ul class="nav">
+      <li class="nav--item"><a href="https://www.etsy.com/shop/516Design" target="blank">Visit Shop</a></li>
+      <li class="nav--item -is-active"><a href="index.html">Guide</a></li>
+    </ul>
   </header>
 
   <div class="content">
     <div class="header-title">Applying your new decal</div>
     <div class="help-step">
-      <div class="column-third">
+      <div class="column--third">
         <div class="clean-icon"></div>
       </div>
-      <div class="column-two-thirds">
+      <div class="column--two-thirds">
         <h3 class="help-header" id="step-one">Clean</h3>
         <p class="help-details">Clean the surface of your MacBook to ensure a smooth and secure application. Be sure the surface is completely dry before you attempt to apply your decal.</p>
       </div>
@@ -38,30 +42,30 @@
     </div>
 
     <div class="help-step">
-      <div class="column-third">
+      <div class="column--third">
         <div class="trash-icon"></div>
       </div>
-      <div class="column-two-thirds">
+      <div class="column--two-thirds">
         <h3 class="help-header" id="step-two">Remove</h3>
         <p class="help-details">Remove the white backing. Try to avoid touching the sticky part of the decal while handling it.</p>
       </div>
     </div>
 
     <div class="help-step">
-      <div class="column-third">
+      <div class="column--third">
         <div class="apply-icon"></div>
       </div>
-      <div class="column-two-thirds">
+      <div class="column--two-thirds">
         <h3 class="help-header" id="step-three">Place</h3>
         <p class="help-details">Place your decal on the surface of your MacBook, being sure to align it perfectly around the Apple logo. It may help to slightly open your computer and allow the light to guide you during the application. Press firmly around the decal to set it in place.</p>
       </div>
     </div>
 
     <div class="help-step">
-      <div class="column-third">
+      <div class="column--third">
         <div class="peel-icon"></div>
       </div>
-      <div class="column-two-thirds">
+      <div class="column--two-thirds">
         <h3 class="help-header" id="step-four">Peel</h3>
         <p class="help-details">Peel off the clear transfer adhesive to reveal your fresh new design! Tweet us a photo of your new decal at <a href="https://twitter.com/DE516N" target="blank">@DE516N</a> for 50% off your next purchase!</p>
       </div>
