--- a/guide/index.html
+++ b/guide/index.html
@@ -21,10 +21,10 @@
 
 <body>
   <header class="header">
-    <a href="../index.html" class="header--logo"></a>
+    <a href="./" class="header--logo"></a>
     <ul class="nav">
       <li class="nav--item"><a href="https://www.etsy.com/shop/516Design" target="blank">Visit Shop</a></li>
-      <li class="nav--item -is-active"><a href="index.html">Guide</a></li>
+      <li class="nav--item -is-active"><a href="./guide/">Guide</a></li>
     </ul>
   </header>
 
