Added stickers page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <header class="header">
     <a href="./" class="header--logo"></a>
     <ul class="nav">
-      <li class="nav--item"><a href="https://www.etsy.com/shop/516Design" target="blank">Visit Shop</a></li>
+      <li class="nav--item"><a href="./stickers/">Stickers</a></li>
       <li class="nav--item"><a href="./guide/">Guide</a></li>
     </ul>
   </header>
