--- a/guide/index.html
+++ b/guide/index.html
@@ -23,8 +23,8 @@
   <header class="header">
     <a href="../" class="header--logo"></a>
     <ul class="nav">
-      <li class="nav--item"><a href="https://www.etsy.com/shop/516Design" target="blank">Visit Shop</a></li>
-      <li class="nav--item -is-active"><a href="./">Guide</a></li>
+      <li class="nav--item"><a href="../stickers/">Stickers</a></li>
+      <li class="nav--item is-active"><a href="./">Guide</a></li>
     </ul>
   </header>
 
