--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <title>516 Design</title>
 <link rel="stylesheet" type="text/css" href="styles/css/index.css">
 <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,900" rel="stylesheet">
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -30,15 +31,35 @@
 
   <div class="content">
 
-    <div class="column--full">
-      <a href="https://www.etsy.com/shop/516Design" target="blank" class="card card--square card--is-selectable relative">
-        <div class="il-shop"></div>
-        <div class="card--footer">
-          <h3>Visit Shop</h3>
-        </div>
-      </a>
+    <div class="row">
+      <div class="column--full">
+        <a href="https://www.etsy.com/shop/516Design" target="blank" class="card card--square card--is-selectable relative">
+          <div class="il-shop"></div>
+          <div class="card--footer">
+            <h3>Visit Shop</h3>
+          </div>
+        </a>
+      </div>
     </div>
 
+    <div class="row">
+      <div class="column--full">
+        <h1 class="section-header">Reviews</h1>
+        <div class="card card--review">
+          <div class="review-image instagram_lizelleg"></div>
+          <div class="card--content">
+            <p class="review-author text-instagram">@lizelleg</p>
+            <p class="review-text">Making my Friday workday even better. Thank you <span class="text-instagram">#516design #r2d2love #starwars #gooddesign</span></p>
+          </div>
+          <div class="card--footer">
+            <div class="review-link">
+              <i class="link-logo instagram-logo"></i>
+              Instagram
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <footer class="column">
