instagram hashtag link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="review-image instagram_lizelleg"></div>
           <div class="card--content">
             <p class="review-author text-instagram">@lizelleg</p>
-            <p class="review-text">Making my Friday workday even better. Thank you <span class="text-instagram">#516design #r2d2love #starwars #gooddesign</span></p>
+            <p class="review-text">Making my Friday workday even better. Thank you <span class="text-instagram"><a href="https://www.instagram.com/explore/tags/516design/" target="_blank">#516design</a> #r2d2love #starwars #gooddesign</span></p>
           </div>
           <div class="card--footer">
             <div class="review-link">
