--- a/index.html
+++ b/index.html
@@ -29,22 +29,29 @@
     </ul>
   </header>
 
-  <div class="content">
+  <div class="hero hero--home"></div>
 
+  <div class="content">
     <div class="row">
       <div class="column--full">
-        <a href="https://www.etsy.com/shop/516Design" target="blank" class="card card--square card--is-selectable relative">
-          <div class="il-shop"></div>
-          <div class="card--footer">
-            <h3>Visit Shop</h3>
-          </div>
-        </a>
+        <h1 class="section-header section-flex">Reviews</h1>
       </div>
     </div>
-
-    <div class="row">
+    <div class="row flex-row">
       <div class="column--full">
-        <h1 class="section-header">Reviews</h1>
+        <div class="card card--review">
+          <div class="review-image instagram_lizelleg"></div>
+          <div class="card--content">
+            <p class="review-author text-instagram"><a href="https://www.instagram.com/lizelleg/" target="_blank">@lizelleg</a></p>
+            <p class="review-text">Making my Friday workday even better. Thank you <span class="text-instagram"><a href="https://www.instagram.com/explore/tags/516design/" target="_blank">#516design</a> <a href="https://www.instagram.com/explore/tags/r2d2love/" target="_blank">#r2d2love</a> <a href="https://www.instagram.com/explore/tags/starwars/" target="_blank">#starwars</a> <a href="https://www.instagram.com/explore/tags/gooddesign/" target="_blank">#gooddesign</a></span></p>
+          </div>
+          <div class="card--footer">
+            <a class="review-link" href="https://www.instagram.com/p/BEgy_HYQ63z/" target="_blank">
+              <i class="link-logo instagram-logo"></i>
+              Instagram
+            </a>
+          </div>
+        </div>
         <div class="card card--review">
           <div class="review-image instagram_lizelleg"></div>
           <div class="card--content">
