aligned flex-row to header

--- a/index.html
+++ b/index.html
@@ -31,38 +31,79 @@
 
   <div class="hero hero--home"></div>
 
-  <div class="content">
-    <div class="row">
-      <div class="column--full">
-        <h1 class="section-header section-flex">Reviews</h1>
-      </div>
+  <div class="row">
+    <div class="column--full">
+      <h1 class="section-header section-flex">Reviews</h1>
     </div>
-    <div class="row flex-row">
-      <div class="column--full">
-        <div class="card card--review">
-          <div class="review-image instagram_lizelleg"></div>
-          <div class="card--content">
-            <p class="review-author text-instagram"><a href="https://www.instagram.com/lizelleg/" target="_blank">@lizelleg</a></p>
-            <p class="review-text">Making my Friday workday even better. Thank you <span class="text-instagram"><a href="https://www.instagram.com/explore/tags/516design/" target="_blank">#516design</a> <a href="https://www.instagram.com/explore/tags/r2d2love/" target="_blank">#r2d2love</a> <a href="https://www.instagram.com/explore/tags/starwars/" target="_blank">#starwars</a> <a href="https://www.instagram.com/explore/tags/gooddesign/" target="_blank">#gooddesign</a></span></p>
-          </div>
-          <div class="card--footer">
-            <a class="review-link" href="https://www.instagram.com/p/BEgy_HYQ63z/" target="_blank">
-              <i class="link-logo instagram-logo"></i>
-              Instagram
-            </a>
+  </div>
+  <div class="flex-row">
+    <div class="column--full column--review">
+      <div class="card card--review">
+        <div class="review-image instagram_lizelleg"></div>
+        <div class="card--content">
+          <p class="review-author text-instagram"><a href="https://www.instagram.com/lizelleg/" target="_blank">@lizelleg</a></p>
+          <p class="review-text">Making my Friday workday even better. Thank you <span class="text-instagram"><a href="https://www.instagram.com/explore/tags/516design/" target="_blank">#516design</a> <a href="https://www.instagram.com/explore/tags/r2d2love/" target="_blank">#r2d2love</a> <a href="https://www.instagram.com/explore/tags/starwars/" target="_blank">#starwars</a> <a href="https://www.instagram.com/explore/tags/gooddesign/" target="_blank">#gooddesign</a></span></p>
+        </div>
+        <div class="card--footer">
+          <a class="review-link" href="https://www.instagram.com/p/BEgy_HYQ63z/" target="_blank">
+            <i class="link-logo instagram-logo"></i>
+            Instagram
+          </a>
+        </div>
+      </div>
+
+      <div class="card card--review">
+        <div class="review-image instagram_lizelleg"></div>
+        <div class="card--content">
+          <p class="review-author text-instagram">@lizelleg</p>
+          <p class="review-text">Making my Friday workday even better. Thank you <span class="text-instagram"><a href="https://www.instagram.com/explore/tags/516design/" target="_blank">#516design</a> #r2d2love #starwars #gooddesign</span></p>
+        </div>
+        <div class="card--footer">
+          <div class="review-link">
+            <i class="link-logo instagram-logo"></i>
+            Instagram
           </div>
         </div>
-        <div class="card card--review">
-          <div class="review-image instagram_lizelleg"></div>
-          <div class="card--content">
-            <p class="review-author text-instagram">@lizelleg</p>
-            <p class="review-text">Making my Friday workday even better. Thank you <span class="text-instagram"><a href="https://www.instagram.com/explore/tags/516design/" target="_blank">#516design</a> #r2d2love #starwars #gooddesign</span></p>
+      </div>
+
+      <div class="card card--review">
+        <div class="review-image instagram_lizelleg"></div>
+        <div class="card--content">
+          <p class="review-author text-instagram">@lizelleg</p>
+          <p class="review-text">Making my Friday workday even better. Thank you <span class="text-instagram"><a href="https://www.instagram.com/explore/tags/516design/" target="_blank">#516design</a> #r2d2love #starwars #gooddesign</span></p>
+        </div>
+        <div class="card--footer">
+          <div class="review-link">
+            <i class="link-logo instagram-logo"></i>
+            Instagram
           </div>
-          <div class="card--footer">
-            <div class="review-link">
-              <i class="link-logo instagram-logo"></i>
-              Instagram
-            </div>
+        </div>
+      </div>
+
+      <div class="card card--review">
+        <div class="review-image instagram_lizelleg"></div>
+        <div class="card--content">
+          <p class="review-author text-instagram">@lizelleg</p>
+          <p class="review-text">Making my Friday workday even better. Thank you <span class="text-instagram"><a href="https://www.instagram.com/explore/tags/516design/" target="_blank">#516design</a> #r2d2love #starwars #gooddesign</span></p>
+        </div>
+        <div class="card--footer">
+          <div class="review-link">
+            <i class="link-logo instagram-logo"></i>
+            Instagram
+          </div>
+        </div>
+      </div>
+
+      <div class="card card--review">
+        <div class="review-image instagram_lizelleg"></div>
+        <div class="card--content">
+          <p class="review-author text-instagram">@lizelleg</p>
+          <p class="review-text">Making my Friday workday even better. Thank you <span class="text-instagram"><a href="https://www.instagram.com/explore/tags/516design/" target="_blank">#516design</a> #r2d2love #starwars #gooddesign</span></p>
+        </div>
+        <div class="card--footer">
+          <div class="review-link">
+            <i class="link-logo instagram-logo"></i>
+            Instagram
           </div>
         </div>
       </div>
