--- a/index.html
+++ b/index.html
@@ -37,78 +37,47 @@
     </div>
   </div>
   <div class="flex-row">
-    <div class="column--full column--review">
-      <div class="card card--review">
-        <div class="review-image instagram_lizelleg"></div>
-        <div class="card--content">
-          <p class="review-author text-instagram"><a href="https://www.instagram.com/lizelleg/" target="_blank">@lizelleg</a></p>
-          <p class="review-text">Making my Friday workday even better. Thank you <span class="text-instagram"><a href="https://www.instagram.com/explore/tags/516design/" target="_blank">#516design</a> <a href="https://www.instagram.com/explore/tags/r2d2love/" target="_blank">#r2d2love</a> <a href="https://www.instagram.com/explore/tags/starwars/" target="_blank">#starwars</a> <a href="https://www.instagram.com/explore/tags/gooddesign/" target="_blank">#gooddesign</a></span></p>
-        </div>
-        <div class="card--footer">
-          <a class="review-link" href="https://www.instagram.com/p/BEgy_HYQ63z/" target="_blank">
-            <i class="link-logo instagram-logo"></i>
-            Instagram
-          </a>
-        </div>
+    <div class="card card--review">
+      <div class="review-image instagram_lizelleg"></div>
+      <div class="card--content">
+        <p class="review-author text-instagram"><a href="https://www.instagram.com/lizelleg/" target="_blank">@lizelleg</a></p>
+        <p class="review-text">Making my Friday workday even better. Thank you <span class="text-instagram"><a href="https://www.instagram.com/explore/tags/516design/" target="_blank">#516design</a> <a href="https://www.instagram.com/explore/tags/r2d2love/" target="_blank">#r2d2love</a> <a href="https://www.instagram.com/explore/tags/starwars/" target="_blank">#starwars</a> <a href="https://www.instagram.com/explore/tags/gooddesign/" target="_blank">#gooddesign</a></span></p>
       </div>
-
-      <div class="card card--review">
-        <div class="review-image instagram_lizelleg"></div>
-        <div class="card--content">
-          <p class="review-author text-instagram">@lizelleg</p>
-          <p class="review-text">Making my Friday workday even better. Thank you <span class="text-instagram"><a href="https://www.instagram.com/explore/tags/516design/" target="_blank">#516design</a> #r2d2love #starwars #gooddesign</span></p>
-        </div>
-        <div class="card--footer">
-          <div class="review-link">
-            <i class="link-logo instagram-logo"></i>
-            Instagram
-          </div>
-        </div>
-      </div>
-
-      <div class="card card--review">
-        <div class="review-image instagram_lizelleg"></div>
-        <div class="card--content">
-          <p class="review-author text-instagram">@lizelleg</p>
-          <p class="review-text">Making my Friday workday even better. Thank you <span class="text-instagram"><a href="https://www.instagram.com/explore/tags/516design/" target="_blank">#516design</a> #r2d2love #starwars #gooddesign</span></p>
-        </div>
-        <div class="card--footer">
-          <div class="review-link">
-            <i class="link-logo instagram-logo"></i>
-            Instagram
-          </div>
-        </div>
-      </div>
-
-      <div class="card card--review">
-        <div class="review-image instagram_lizelleg"></div>
-        <div class="card--content">
-          <p class="review-author text-instagram">@lizelleg</p>
-          <p class="review-text">Making my Friday workday even better. Thank you <span class="text-instagram"><a href="https://www.instagram.com/explore/tags/516design/" target="_blank">#516design</a> #r2d2love #starwars #gooddesign</span></p>
-        </div>
-        <div class="card--footer">
-          <div class="review-link">
-            <i class="link-logo instagram-logo"></i>
-            Instagram
-          </div>
-        </div>
-      </div>
-
-      <div class="card card--review">
-        <div class="review-image instagram_lizelleg"></div>
-        <div class="card--content">
-          <p class="review-author text-instagram">@lizelleg</p>
-          <p class="review-text">Making my Friday workday even better. Thank you <span class="text-instagram"><a href="https://www.instagram.com/explore/tags/516design/" target="_blank">#516design</a> #r2d2love #starwars #gooddesign</span></p>
-        </div>
-        <div class="card--footer">
-          <div class="review-link">
-            <i class="link-logo instagram-logo"></i>
-            Instagram
-          </div>
-        </div>
+      <div class="card--footer">
+        <a class="review-link" href="https://www.instagram.com/p/BEgy_HYQ63z/" target="_blank">
+          <i class="link-logo instagram-logo"></i>
+          Instagram
+        </a>
       </div>
     </div>
-  </div>
+
+    <div class="card card--review">
+      <div class="review-image instagram_shekira"></div>
+      <div class="card--content">
+        <p class="review-author text-instagram"><a href="https://www.instagram.com/shekira/" target="_blank">@shekira</a></p>
+        <p class="review-text">I started a system in college of naming my hard drives after famous villains, robots, or computers. This drive is BB-8 and I splurged on a decal. Now I'm compelled to decal them all! <span class="text-instagram"><a href="https://www.instagram.com/explore/tags/de516n/" target="_blank">#de516n</a> <a href="https://www.instagram.com/explore/tags/lacie/" target="_blank">#lacie</a> <a href="https://www.instagram.com/explore/tags/bb8/" target="_blank">#bb8</a> <a href="https://www.instagram.com/explore/tags/nerdphotographer/" target="_blank">#nerdphotographer</a></span></p>
+      </div>
+      <div class="card--footer">
+        <a class="review-link" href="https://www.instagram.com/p/BK3l0vTjN43/" target="_blank">
+          <i class="link-logo instagram-logo"></i>
+          Instagram
+        </a>
+      </div>
+    </div>
+
+    <div class="card card--review">
+      <div class="review-image twitter_uxjw"></div>
+      <div class="card--content">
+        <p class="review-author text-twitter"><a href="https://twitter.com/uxjw" target="_blank">@uxjw</a></p>
+        <p class="review-text">Finally found a good spot for the BB-8 decal from <span class="text-twitter"><a href="https://twitter.com/DE516N" target="_blank">@DE516N</a></span></p>
+      </div>
+      <div class="card--footer">
+        <a class="review-link" href="https://twitter.com/uxjw/status/804920428107997184" target="_blank">
+          <i class="link-logo twitter-logo"></i>
+          Twitter
+        </a>
+      </div>
+    </div>
 
   <footer class="column">
     <p>&copy;2016 516 Design</p>
