completed flex-row

--- a/index.html
+++ b/index.html
@@ -66,6 +66,20 @@
     </div>
 
     <div class="card card--review">
+      <div class="review-image twitter_coryclubb"></div>
+      <div class="card--content">
+        <p class="review-author text-twitter"><a href="https://twitter.com/coryclubb" target="_blank">@coryclubb</a></p>
+        <p class="review-text">K-2SO ready for his mission! Thanks <span class="text-twitter"><a href="https://twitter.com/JaredRauh" target="_blank">@JaredRauh</a> <a href="https://twitter.com/DE516N" target="_blank">#RogueOne</a> <a href="https://twitter.com/DE516N" target="_blank">#2daysaway</a></span></p>
+      </div>
+      <div class="card--footer">
+        <a class="review-link" href="https://twitter.com/coryclubb/status/808720345901449216" target="_blank">
+          <i class="link-logo twitter-logo"></i>
+          Twitter
+        </a>
+      </div>
+    </div>
+
+    <div class="card card--review">
       <div class="review-image twitter_uxjw"></div>
       <div class="card--content">
         <p class="review-author text-twitter"><a href="https://twitter.com/uxjw" target="_blank">@uxjw</a></p>
@@ -78,9 +92,10 @@
         </a>
       </div>
     </div>
+  </div>
 
   <footer class="column">
-    <p>&copy;2016 516 Design</p>
+    <p>&copy;2017 516Design</p>
   </footer>
 
 </body>
