removed sticker link

--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
 
 <body>
   <header class="header">
-    <a href="./" class="header--logo"></a>
-    <ul class="nav">
-      <li class="nav--item"><a href="./stickers/">Stickers</a></li>
-      <li class="nav--item"><a href="./guide/">Guide</a></li>
-    </ul>
+    <div class="row">
+      <a href="./" class="header--logo"></a>
+      <ul class="nav">
+        <li class="nav--item"><a href="./guide/">Guide</a></li>
+      </ul>
+    </div>
   </header>
 
   <div class="hero hero--home"></div>
