--- a/stickers/index.html
+++ b/stickers/index.html
@@ -21,11 +21,13 @@
 
 <body>
   <header class="header">
-    <a href="../" class="header--logo"></a>
-    <ul class="nav">
-      <li class="nav--item"><a href="./">Stickers</a></li>
-      <li class="nav--item is-active"><a href="../guide/">Guide</a></li>
-    </ul>
+    <div class="row">
+      <a href="../" class="header--logo"></a>
+      <ul class="nav">
+        <li class="nav--item"><a href="./">Stickers</a></li>
+        <li class="nav--item is-active"><a href="../guide/">Guide</a></li>
+      </ul>
+    </div>
   </header>
 
   <div class="content">
