--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <div class="row">
       <a href="./" class="header--logo"></a>
       <ul class="nav">
+        <li class="nav--item"><a href="https://www.etsy.com/shop/516Design">Shop</a></li>
         <li class="nav--item"><a href="./guide/">Guide</a></li>
       </ul>
     </div>
