added macbook hero

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
   </header>
 
   <div class="hero hero--home"></div>
+  <div class="hero hero--macbook">
+    <div class="macbook">
+      <div class="sticker sticker--illinois"></div>
+    </div>
+  </div>
 
   <div class="row">
     <div class="column--full">
