Added explanitory text on step 4 for stickers

--- a/guide/index.html
+++ b/guide/index.html
@@ -69,6 +69,7 @@
       </div>
       <div class="column--two-thirds">
         <h3 class="help-header" id="step-four">Peel</h3>
+        <p class="help-details"><strong>Note: Only follow this last step if you are applying a black, vinyl decal.</strong></p>
         <p class="help-details">Peel off the clear transfer adhesive to reveal your fresh new design! Tweet us a photo of your new decal at <a href="https://twitter.com/DE516N" target="blank">@DE516N</a> for 50% off your next purchase!</p>
       </div>
     </div>
