--- a/airpods/index.html
+++ b/airpods/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8"/>
 <!-- Enable responsive view on mobile devices -->
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-<title>Guide – 516 Design</title>
+<title>AirPod Guide – 516 Design</title>
 <link rel="stylesheet" type="text/css" href="../styles/css/index.css">
 <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 <script>
@@ -24,11 +24,13 @@
     <div class="row">
       <a href="../" class="header--logo"></a>
       <ul class="nav">
-        <li class="nav--item"><a href="../shop/">Shop</a></li>
+        <li class="nav--item"><a href="../stickers/">Stickers</a></li>
         <li class="nav--item is-active"><a href="./">Guide</a></li>
       </ul>
     </div>
   </header>
+
+  <div class="hero hero--airpod"></div>
 
   <div class="content">
     <div class="header-title">Applying your new decal</div>
