added vinyl decal

--- a/shop/index.html
+++ b/shop/index.html
@@ -31,6 +31,72 @@
   </header>
 
   <div class="content">
+    <!-- Vinyl Decals -->
+    <h1 class="shop-header">
+      Vinyl Decals
+      <a class="shop-button button button--smooth button--small">View More</a>
+    </h1>
+
+    <div class="shop-item" id="bb8-decal">
+      <a class="card is-selectable" href="http://etsy.me/2pYVZhH" target="_blank">
+        <div class="img"></div>
+      </a>
+      <div class="card-title">
+        <p class="float-left">BB8</p>
+        <p class="float-right">$5</p>
+      </div>
+    </div>
+
+    <div class="shop-item" id="r2d2-decal">
+      <a class="card is-selectable" href="http://etsy.me/2gukd0m" target="_blank">
+        <div class="img"></div>
+      </a>
+      <div class="card-title">
+        <p class="float-left">R2D2</p>
+        <p class="float-right">$5</p>
+      </div>
+    </div>
+
+    <div class="shop-item" id="stormtrooper-decal">
+      <a class="card is-selectable" href="http://etsy.me/2pvB5d1" target="_blank">
+        <div class="img"></div>
+      </a>
+      <div class="card-title">
+        <p class="float-left">Stormtrooper</p>
+        <p class="float-right">$5</p>
+      </div>
+    </div>
+
+    <div class="shop-item" id="texas">
+      <a class="card is-selectable" href="http://etsy.me/2mHFG61" target="_blank">
+        <div class="img"></div>
+      </a>
+      <div class="card-title">
+        <p class="float-left">State - Detailed</p>
+        <p class="float-right">$5</p>
+      </div>
+    </div>
+
+    <div class="shop-item" id="wisconsin">
+      <a class="card is-selectable" href="http://etsy.me/2nHcah5" target="_blank">
+        <div class="img"></div>
+      </a>
+      <div class="card-title">
+        <p class="float-left">State - Acronym</p>
+        <p class="float-right">$5</p>
+      </div>
+    </div>
+
+    <div class="shop-item" id="golf">
+      <a class="card is-selectable" href="https://www.stickermule.com/marketplace/16228-namastay-in-bed" target="_blank">
+        <div class="img"></div>
+      </a>
+      <div class="card-title">
+        <p class="float-left">Golf</p>
+        <p class="float-right">$5</p>
+      </div>
+    </div>
+
     <!-- Colored Decals -->
     <h1 class="shop-header">
       Colored Decals
@@ -162,8 +228,8 @@
         <p class="float-right">$5</p>
       </div>
     </div>
-  </div>
 
+  </div>
   <footer class="column">
     <p>&copy;2017 516 Design</p>
   </footer>
