improved click area of nav

--- a/guide/index.html
+++ b/guide/index.html
@@ -24,8 +24,8 @@
     <div class="row">
       <a href="../" class="header--logo"></a>
       <ul class="nav">
-        <li class="nav--item"><a href="../">Home</a></li>
-        <li class="nav--item is-active"><a href="./">Guide</a></li>
+        <li><a href="../" class="nav--item">Home</a></li>
+        <li><a href="./" class="nav--item is-active">Guide</a></li>
       </ul>
     </div>
   </header>
