--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <div class="row">
       <a href="../" class="header--logo"></a>
       <ul class="nav">
-        <li class="nav--item is-active"><a href="./">Home</a></li>
-        <li class="nav--item"><a href="./guide/">Guide</a></li>
+        <li><a href="./" class="nav--item is-active">Home</a></li>
+        <li><a href="./guide/" class="nav--item">Guide</a></li>
       </ul>
     </div>
   </header>
@@ -41,62 +41,62 @@
     </h1>
 
     <div class="shop-item" id="bb8-decal">
-      <a class="card is-selectable" href="http://etsy.me/2pYVZhH" target="_blank">
+      <a class="card is-selectable" href="http://etsy.me/2a5JT0U" target="_blank">
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="float-left">BB8</p>
-        <p class="float-right">$5</p>
+        <p class="shop-item--title">BB8</p>
+        <p class="shop-item--price">$5</p>
       </div>
     </div>
 
     <div class="shop-item" id="r2d2-decal">
-      <a class="card is-selectable" href="http://etsy.me/2gukd0m" target="_blank">
+      <a class="card is-selectable" href="http://etsy.me/2oIee9a" target="_blank">
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="float-left">R2D2</p>
-        <p class="float-right">$5</p>
+        <p class="shop-item--title">R2D2</p>
+        <p class="shop-item--price">$5</p>
       </div>
     </div>
 
     <div class="shop-item" id="stormtrooper-decal">
-      <a class="card is-selectable" href="http://etsy.me/2pvB5d1" target="_blank">
+      <a class="card is-selectable" href="http://etsy.me/2pxx5Ze" target="_blank">
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="float-left">Stormtrooper</p>
-        <p class="float-right">$5</p>
+        <p class="shop-item--title">Stormtrooper</p>
+        <p class="shop-item--price">$5</p>
       </div>
     </div>
 
     <div class="shop-item" id="texas">
-      <a class="card is-selectable" href="http://etsy.me/2mHFG61" target="_blank">
+      <a class="card is-selectable" href="http://etsy.me/2ouckNY" target="_blank">
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="float-left">State - Detailed</p>
-        <p class="float-right">$5</p>
+        <p class="shop-item--title">State - Detailed</p>
+        <p class="shop-item--price">$5</p>
       </div>
     </div>
 
     <div class="shop-item" id="wisconsin">
-      <a class="card is-selectable" href="http://etsy.me/2nHcah5" target="_blank">
+      <a class="card is-selectable" href="http://etsy.me/2q3lQVs" target="_blank">
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="float-left">State - Acronym</p>
-        <p class="float-right">$5</p>
+        <p class="shop-item--title">State - Acronym</p>
+        <p class="shop-item--price">$5</p>
       </div>
     </div>
 
     <div class="shop-item" id="golf">
-      <a class="card is-selectable" href="https://www.stickermule.com/marketplace/16228-namastay-in-bed" target="_blank">
+      <a class="card is-selectable" href="http://etsy.me/1NAuhAw" target="_blank">
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="float-left">Golf</p>
-        <p class="float-right">$5</p>
+        <p class="shop-item--title">Golf</p>
+        <p class="shop-item--price">$5</p>
       </div>
     </div>
 
@@ -111,8 +111,8 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="float-left">Lightsaber</p>
-        <p class="float-right">$8</p>
+        <p class="shop-item--title">Lightsaber</p>
+        <p class="shop-item--price">$8</p>
       </div>
     </div>
 
@@ -121,8 +121,8 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="float-left">Jengo Fett</p>
-        <p class="float-right">$8</p>
+        <p class="shop-item--title">Jengo Fett</p>
+        <p class="shop-item--price">$8</p>
       </div>
     </div>
 
@@ -131,8 +131,8 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="float-left">Boba Fett</p>
-        <p class="float-right">$8</p>
+        <p class="shop-item--title">Boba Fett</p>
+        <p class="shop-item--price">$8</p>
       </div>
     </div>
 
@@ -141,8 +141,8 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="float-left">Superman</p>
-        <p class="float-right">$8</p>
+        <p class="shop-item--title">Superman</p>
+        <p class="shop-item--price">$8</p>
       </div>
     </div>
 
@@ -151,8 +151,8 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="float-left">Captain America</p>
-        <p class="float-right">$8</p>
+        <p class="shop-item--title">Captain America</p>
+        <p class="shop-item--price">$8</p>
       </div>
     </div>
 
@@ -161,8 +161,8 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="float-left">Pokémon</p>
-        <p class="float-right">$5</p>
+        <p class="shop-item--title">Pokémon</p>
+        <p class="shop-item--price">$5</p>
       </div>
     </div>
 
@@ -177,8 +177,8 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="float-left">BB8</p>
-        <p class="float-right">$5</p>
+        <p class="shop-item--title">BB8</p>
+        <p class="shop-item--price">$5</p>
       </div>
     </div>
 
@@ -187,8 +187,8 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="float-left">K2-SO</p>
-        <p class="float-right">$5</p>
+        <p class="shop-item--title">K2-SO</p>
+        <p class="shop-item--price">$5</p>
       </div>
     </div>
 
@@ -197,8 +197,8 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="float-left">R2D2</p>
-        <p class="float-right">$5</p>
+        <p class="shop-item--title">R2D2</p>
+        <p class="shop-item--price">$5</p>
       </div>
     </div>
 
@@ -207,8 +207,8 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="float-left">AirPod Classic</p>
-        <p class="float-right">$3</p>
+        <p class="shop-item--title">AirPod Classic</p>
+        <p class="shop-item--price">$3</p>
       </div>
     </div>
 
@@ -217,8 +217,8 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="float-left">Apple Gum</p>
-        <p class="float-right">$5</p>
+        <p class="shop-item--title">Apple Gum</p>
+        <p class="shop-item--price">$5</p>
       </div>
     </div>
 
@@ -227,8 +227,8 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="float-left">Namast'ay in bed</p>
-        <p class="float-right">$5</p>
+        <p class="shop-item--title">Namast'ay in bed</p>
+        <p class="shop-item--price">$5</p>
       </div>
     </div>
   </div>
