cleaned up breaking cards on mobile

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="shop-item--title">BB8</p>
+        <span class="shop-item--title"><p>BB8</p></span>
         <p class="shop-item--price">$5</p>
       </div>
     </div>
@@ -66,7 +66,7 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="shop-item--title">R2D2</p>
+        <span class="shop-item--title"><p>R2D2</p></span>
         <p class="shop-item--price">$5</p>
       </div>
     </div>
@@ -76,7 +76,7 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="shop-item--title">Stormtrooper</p>
+        <span class="shop-item--title"><p>Stormtrooper</p></span>
         <p class="shop-item--price">$5</p>
       </div>
     </div>
@@ -86,7 +86,7 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="shop-item--title">State - Detailed</p>
+        <span class="shop-item--title"><p>State - Detailed</p></span>
         <p class="shop-item--price">$5</p>
       </div>
     </div>
@@ -96,7 +96,7 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="shop-item--title">State - Acronym</p>
+        <span class="shop-item--title"><p>State - Acronym</p></span>
         <p class="shop-item--price">$5</p>
       </div>
     </div>
@@ -106,7 +106,7 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="shop-item--title">Golf</p>
+        <span class="shop-item--title"><p>Golf</p></span>
         <p class="shop-item--price">$5</p>
       </div>
     </div>
@@ -122,7 +122,7 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="shop-item--title">Lightsaber</p>
+        <span class="shop-item--title"><p>Lightsaber</p></span>
         <p class="shop-item--price">$8</p>
       </div>
     </div>
@@ -132,7 +132,7 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="shop-item--title">Jengo Fett</p>
+        <span class="shop-item--title"><p>Jengo Fett</p></span>
         <p class="shop-item--price">$8</p>
       </div>
     </div>
@@ -142,7 +142,7 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="shop-item--title">Boba Fett</p>
+        <span class="shop-item--title"><p>Boba Fett</p></span>
         <p class="shop-item--price">$8</p>
       </div>
     </div>
@@ -152,7 +152,7 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="shop-item--title">Superman</p>
+        <span class="shop-item--title"><p>Superman</p></span>
         <p class="shop-item--price">$8</p>
       </div>
     </div>
@@ -162,7 +162,7 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="shop-item--title">Captain America</p>
+        <span class="shop-item--title"><p>Captain America</p></span>
         <p class="shop-item--price">$8</p>
       </div>
     </div>
@@ -172,7 +172,7 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="shop-item--title">Pokémon</p>
+        <span class="shop-item--title"><p>Pokémon</p></span>
         <p class="shop-item--price">$5</p>
       </div>
     </div>
@@ -188,7 +188,7 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="shop-item--title">BB8</p>
+        <span class="shop-item--title"><p>BB8</p></span>
         <p class="shop-item--price">$5</p>
       </div>
     </div>
@@ -198,7 +198,7 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="shop-item--title">K2-SO</p>
+        <span class="shop-item--title"><p>K2-SO</p></span>
         <p class="shop-item--price">$5</p>
       </div>
     </div>
@@ -208,7 +208,7 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="shop-item--title">R2D2</p>
+        <span class="shop-item--title"><p>R2D2</p></span>
         <p class="shop-item--price">$5</p>
       </div>
     </div>
@@ -218,7 +218,7 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="shop-item--title">AirPod Classic</p>
+        <span class="shop-item--title"><p>AirPod Classic</p></span>
         <p class="shop-item--price">$3</p>
       </div>
     </div>
@@ -228,7 +228,7 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="shop-item--title">Apple Gum</p>
+        <span class="shop-item--title"><p>Apple Gum</p></span>
         <p class="shop-item--price">$5</p>
       </div>
     </div>
@@ -238,7 +238,7 @@
         <div class="img"></div>
       </a>
       <div class="card-title">
-        <p class="shop-item--title">Namast'ay in bed</p>
+        <span class="shop-item--title"><p>Namast'ay in bed</p></span>
         <p class="shop-item--price">$5</p>
       </div>
     </div>
