fixed cards on modal page

--- a/vinyl.html
+++ b/vinyl.html
@@ -5,7 +5,7 @@
     <div class="img"></div>
   </a>
   <div class="card-title">
-    <p class="shop-item--title">BB8</p>
+    <span class="shop-item--title"><p>BB8</p></span>
     <p class="shop-item--price">$5</p>
   </div>
 </div>
@@ -15,7 +15,7 @@
     <div class="img"></div>
   </a>
   <div class="card-title">
-    <p class="shop-item--title">R2D2</p>
+    <span class="shop-item--title"><p>R2D2</p></span>
     <p class="shop-item--price">$5</p>
   </div>
 </div>
@@ -25,7 +25,7 @@
     <div class="img"></div>
   </a>
   <div class="card-title">
-    <p class="shop-item--title">Stormtrooper</p>
+    <span class="shop-item--title"><p>Stormtrooper</p></span>
     <p class="shop-item--price">$5</p>
   </div>
 </div>
@@ -35,7 +35,7 @@
     <div class="img"></div>
   </a>
   <div class="card-title">
-    <p class="shop-item--title">State - Detailed</p>
+    <span class="shop-item--title"><p>State - Detailed</p></span>
     <p class="shop-item--price">$5</p>
   </div>
 </div>
@@ -45,7 +45,7 @@
     <div class="img"></div>
   </a>
   <div class="card-title">
-    <p class="shop-item--title">State - Acronym</p>
+    <span class="shop-item--title"><p>State - Acronym</p></span>
     <p class="shop-item--price">$5</p>
   </div>
 </div>
@@ -55,7 +55,7 @@
     <div class="img"></div>
   </a>
   <div class="card-title">
-    <p class="shop-item--title">Golf</p>
+    <span class="shop-item--title"><p>Golf</p></span>
     <p class="shop-item--price">$5</p>
   </div>
 </div>
